--- a/Exercise1/product-categories.html
+++ b/Exercise1/product-categories.html
@@ -2,6 +2,7 @@
 <html lang="el">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
     <title>Κατηγορίες Προϊόντων | TechnoData.com</title>
     <meta name="description" content=" " />
     <meta name="keywords" content=" " />
@@ -12,7 +13,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="assets/" width="" height="" alt=""></a>
+        <a href="index.html"><img src="/assets/logoHeader.png" width="50%" height="250" alt="εικόνα σελίδας"></a>
 
         <menu type="toolbar" id="left">
             <li><a href="categories.html">Κατηγορίες</a></li>
@@ -155,10 +156,10 @@
                 <a href="">Ποιοί είμαστε</a>
                 <a href="">Στοιχεία επικοινωνίας</a>
                 <a href="">Συνδέσου μαζί μας</a>
-                <a href="" title="Το TechnoData.gr στο Facebook" class="icon facebook"><img src="" alt="εικόνα facebook"></a>
-                <a href="" title="Ακολουθήστε μας στο Twitter" class="icon twitter"><img src="" alt="εικόνα twitter"></a>
-                <a href="" title="Ακολουθήστε μας στο Instagram"class="icon instagram"><img src="" alt="εικόνα instagram"></a>
-                <a href="" title="Εγγραφείτε στο Youtube" class="icon youtube"><img src="" alt="εικόνα youtube"></a>
+                <a href="" title="Το TechnoData.gr στο Facebook" class="icon facebook"><img src="/assets/facebook.png" alt="εικόνα facebook"></a>
+                <a href="" title="Ακολουθήστε μας στο Twitter" class="icon twitter"><img src="/assets/twitter.png" alt="εικόνα twitter"></a>
+                <a href="" title="Ακολουθήστε μας στο Instagram"class="icon instagram"><img src="/assets/instagram.png" alt="εικόνα instagram"></a>
+                <a href="" title="Εγγραφείτε στο Youtube" class="icon youtube"><img src="/assets/youtube.png" alt="εικόνα youtube"></a>
             </li>
 
             <li>
