--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -2,6 +2,7 @@
 <html lang="el">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
     <title>TechnoData.com</title>
     <meta name="description" content=" " />
     <meta name="keywords" content=" " />
@@ -12,26 +13,50 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="assets/" width="" height="" alt=""></a>
 
-        <menu type="toolbar" id="left">
-            <li>
-                <a href="categories.html">Κατηγορίες</a>
-            </li>
-        </menu>
-
-        <menu type="toolbar" id="right">
-            <li>
-                <a href="about.html">About Us</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-        </menu>
     </header>
 
     <footer>
+        <ul>
+            <li>
+                <h3>Η εταιρία μας</h3>
+                <a href="">Ποιοί είμαστε</a>
+                <a href="">Στοιχεία επικοινωνίας</a>
+                <a href="">Συνδέσου μαζί μας</a>
+                <a href="" title="Το TechnoData.gr στο Facebook" class="icon facebook"><img src="/assets/facebook.png"
+                        alt="εικόνα facebook"></a>
+                <a href="" title="Ακολουθήστε μας στο Twitter" class="icon twitter"><img src="/assets/twitter.png"
+                        alt="εικόνα twitter"></a>
+                <a href="" title="Ακολουθήστε μας στο Instagram" class="icon instagram"><img src="/assets/instagram.png"
+                        alt="εικόνα instagram"></a>
+                <a href="" title="Εγγραφείτε στο Youtube" class="icon youtube"><img src="/assets/youtube.png"
+                        alt="εικόνα youtube"></a>
+            </li>
 
+            <li>
+                <h3>Καταστήματα</h3>
+                <img src="assets/" alt="εικόνα καταστημάτων">
+                <a href="">Βρες το κοντινότερο κατάστημα</a>
+            </li>
+
+            <li>
+                <h3>Έλεγχος παραγγελιών</h3>
+                <a href="">Εξέλιξη παραγγελίας</a>
+                <a href="">Επιστροφή παραγγελίας</a>
+            </li>
+
+            <li>
+                <h3>Βοήθεια</h3>
+                <a href="">Οδηγός αγοράς</a>
+                <a href="">Τρόποι πληρωμής</a>
+                <a href="">Τρόποι αποστολής</a>
+            </li>
+        </ul>
+
+        <p id="copyright">Copyright © 2022 TechnoData - All rights reserved</p>
+        <a href="">Όροι χρήσης</a>
+        <a href="">Πολιτική Απορρήτου</a>
+        <a href="">Cookies</a>
     </footer>
 </body>
 
