--- a/Exercise1/products-pcs.html
+++ b/Exercise1/products-pcs.html
@@ -16,9 +16,177 @@
 
     </header>
 
+    <section id="nav">
+        <nav>
+            <h5><a href="/Exercise1/index.html" title="Επιστροφή στην αρχική.">Αρχική</a></h5>
+            <h4><a href="/Exercise1/product-categories.html" title="Επιστροφή στις κατηγορίες προϊόντων.">Τεχνολογία</a>
+            </h4>
+    </section>
+
     <main>
-        <section id="">
-            
+        <div id="page-title">
+            <h1>Ηλεκτρονικοί Υπολογιστές</h1>
+            <p>6 προϊόντα</p>
+        </div>
+
+        <section id="products">
+            <ul>
+                <li class="product-card">
+                    <button title="Προσθήκη στα αγαπημένα."></button>
+
+                    <a href="" title="">
+                        <img src="/assets/pcs0.png" width="200" height="200" alt="">
+                    </a>
+
+                    <a href="" title="">
+                        <h2>Apple MacBook Pro Ultrabook Space Gray</h2>
+                    </a>
+
+                    <p id="code">0001</p>
+                    <p id="description">2021, 16.2" 3456x2234 Retina Display, M1-Max, 32GB, 1TB SSD, GR Keyboard.</p>
+
+                    <div class="price">
+                        <a href="" title="">4.129€</a>
+                    </div>
+
+                    <div class="reviews">
+                        <a href="" title="">
+                            <img class="rating" src="" width="" height="" alt="">
+                            <p class="counter"></p>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="product-card">
+                    <button title="Προσθήκη στα αγαπημένα."></button>
+
+                    <a href="" title="">
+                        <img src="/assets/pcs1.png" width="200" height="200" alt="">
+                    </a>
+
+                    <a href="" title="">
+                        <h2>Huawei MateBook D15 Ultrabook</h2>
+                    </a>
+
+                    <p id="code">0002</p>
+                    <p id="description">2021, 15.6" 1920x1080 IPS, i3 10110U, 8GB, 265GB SSD, EN Keyboard.</p>
+
+                    <div class="price">
+                        <a href="" title="">650,00€</a>
+                    </div>
+
+                    <div class="reviews">
+                        <a href="" title="">
+                            <img class="rating" src="" width="" height="" alt="">
+                            <p class="counter"></p>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="product-card">
+                    <button title="Προσθήκη στα αγαπημένα."></button>
+
+                    <a href="" title="">
+                        <img src="/assets/pcs2.png" width="200" height="200" alt="">
+                    </a>
+
+                    <a href="" title="">
+                        <h2>Apple iMac All-in-One PC Silver</h2>
+                    </a>
+
+                    <p id="code">0003</p>
+                    <p id="description">2021, 24" 4480x2520 Retina Display, M1, 8GB, 256GB SSD, EN Keyboard.</p>
+
+                    <div class="price">
+                        <a href="" title="">1.598,89€</a>
+                    </div>
+
+                    <div class="reviews">
+                        <a href="" title="">
+                            <img class="rating" src="" width="" height="" alt="">
+                            <p class="counter"></p>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="product-card">
+                    <button title="Προσθήκη στα αγαπημένα."></button>
+
+                    <a href="" title="">
+                        <img src="/assets/pcs3.png" width="200" height="200" alt="">
+                    </a>
+
+                    <a href="" title="">
+                        <h2>MSI Intel Gaming Desktop PC</h2>
+                    </a>
+
+                    <p id="code">0004</p>
+                    <p id="description">2021, i5-10400F, 16GB DDR4, 240GB SSD, 500GB HDD, GeForce RTX 3060.</p>
+
+                    <div class="price">
+                        <a href="" title="">929,00€</a>
+                    </div>
+
+                    <div class="reviews">
+                        <a href="" title="">
+                            <img class="rating" src="" width="" height="" alt="">
+                            <p class="counter"></p>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="product-card">
+                    <button title="Προσθήκη στα αγαπημένα."></button>
+
+                    <a href="" title="">
+                        <img src="/assets/pcs4.png" width="200" height="200" alt="">
+                    </a>
+
+                    <a href="" title="">
+                        <h2>Apple Mac Mini PC</h2>
+                    </a>
+
+                    <p id="code">0005</p>
+                    <p id="description">2020, M1, 8GB, 512GB SSD.</p>
+
+                    <div class="price">
+                        <a href="" title="">963,29€</a>
+                    </div>
+
+                    <div class="reviews">
+                        <a href="" title="">
+                            <img class="rating" src="" width="" height="" alt="">
+                            <p class="counter"></p>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="product-card">
+                    <button title="Προσθήκη στα αγαπημένα."></button>
+
+                    <a href="" title="">
+                        <img src="/assets/pcs5.png" width="200" height="200" alt="">
+                    </a>
+
+                    <a href="" title="">
+                        <h2>MSI Cubi N Mini PC</h2>
+                    </a>
+
+                    <p id="code">0006</p>
+                    <p id="description">2019, N4500, 4GB, 128GB SSD.</p>
+
+                    <div class="price">
+                        <a href="" title="">325,98€</a>
+                    </div>
+
+                    <div class="reviews">
+                        <a href="" title="">
+                            <img class="rating" src="" width="" height="" alt="">
+                            <p class="counter"></p>
+                        </a>
+                    </div>
+                </li>
+            </ul>
         </section>
     </main>
 
