--- a/Exercise1/products-phones.html
+++ b/Exercise1/products-phones.html
@@ -19,16 +19,14 @@
     <section id="nav">
         <nav>
             <h5><a href="/Exercise1/index.html" title="Επιστροφή στην αρχική.">Αρχική</a></h5>
-            <h4><a href="/Exercise1/product-categories.html" title="Επιστροφή στις κατηγορίες προϊόντων.">Τεχνολογία</a>
-            </h4>
-            <h3><a href="/Exercise1/products-phones.html" title="Προϊόντα κινητής τηλεφωνίας.">Κινητή Τηλεφωνία</a></h3>
+            <h4><a href="/Exercise1/product-categories.html" title="Επιστροφή στις κατηγορίες προϊόντων.">Τεχνολογία</a></h4>
         </nav>
     </section>
 
     <main>
         <div id="page-title">
             <h1>Κινητά Τηλέφωνα</h1>
-            <p> προϊόντα</p>
+            <p>6 προϊόντα</p>
         </div>
 
         <section id="products">
