--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -2,19 +2,63 @@
 <html lang="el">
 
 <head>
+    <title>Technodata</title>
     <link rel="icon" type="image/x-icon" href="/assets/logo.png">
-    <title>TechnoData.com</title>
-    <meta name="description" content=" " />
-    <meta name="keywords" content=" " />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis" />
+    <meta name="description" content=" ">
+    <meta name="keywords" content=" ">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
+    <link rel="stylesheet" href="ergasia.css">
 </head>
 
 <body>
-    <header>
+    <header class="header-light-color">
+        <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ ΝΑV ΜΟΝΟ TOY H ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+        <a href="index.html"><img src="assets/logoHeader.png" width="700" height="160" alt="Technodata λογότυτπο"></a>
 
+        <nav class="navigation">
+            <a href="index.html" class="active">ΑΡΧΙΚΗ</a>
+            <a href="product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+        </nav>
     </header>
+
+    <main class="main-content">
+        <h2>Καλως Ήρθατε στο Τechnodata!</h2>
+        <p>Στο eshop μας θα μπορέσετε να προμηθευτείτε και να διαλέξετε απο μια ευρεία γκάμα προϊόντων τεχνολογίας όπως
+            κινητές συσκευές, υπολογιστές αλλά και οικιακές συσκευές στις χαμηλότερες τιμές της αγοράς με την εγγύηση
+            ποιότητας του ομίλου μας.</p>
+
+        <section class="section-promote">
+            <h2>Νέες Παραλαβές</h2> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+            <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
+            <a href="prod-iphone14-promax-details.html"><img src="assets/iphone14pro.png" width="245" height="230"
+                    alt="Apple iPhone 14 Pro Max"></a>
+            <a href="products-phones.html"><img src="assets/samsungs22.png" width="245" height="230"
+                    alt="Samsung S22 Ultra"></a>
+            <a href="products-phones.html"><img src="assets/xiaomi.png" width="260" height="250"
+                    alt="Xiaomi 12T Pro"></a>
+            <a href="products-phones.html"><img src="assets/ipad.png" width="300" height="230" alt="Apple iPad Pro"></a>
+        </section>
+
+        <section class="section-promote">
+            <h2>Hot Προσφορές</h2><!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η2 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
+            <p>Εκθεσιακά προϊόντα και προηγούμενης γενίας σε μειωμένες τιμές</p>
+            <a href="products-phones.html"><img src="assets/iphone_old.png" width="255" height="240"
+                    alt="Apple iPhone 11"></a>
+            <a href="products-phones.html"><img src="assets/samsung_old.png" width="155" height="240"
+                    alt="Samsung S10+"></a>
+            <a href="products-phones.html"><img src="assets/xiaomi_old.png" width="255" height="240"
+                    alt="Xiaomi Pad 5"></a>
+            <a href="products-phones.html"><img src="assets/apple_watch.png" width="255" height="240"
+                    alt="Apple Watch Series 2"></a>
+        </section>
+    </main>
 
     <footer>
         <ul>
