Split css files.

--- a/Exercise2/contact.html
+++ b/Exercise2/contact.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="ergasia.css">
+    <link rel="stylesheet" href="/Exercise2/css/contact.css">
 </head>
 
 <body>
