Templated + Updated Exercise1.

--- a/Exercise2/contact.html
+++ b/Exercise2/contact.html
@@ -10,29 +10,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="/Exercise2/css/contact.css">
 
 </head>
 
 <body>
     <header class="header-light-color">
-        
-        <a href="index.html"><img src="assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο"></a>
+
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="index.html">ΑΡΧΙΚΗ</a>
-            <a href="product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
+            <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="/Exercise2/contact.html" class="active">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
 
     </header>
 
     <main class="main-content">
-        <h2>Τεχνική Υποστήριξη</h2> 
-       
+        <h2>Τεχνική Υποστήριξη</h2>
+
         <h3>Φόρμα Επικοινωνίας</h3>
         <!--ΙΣΩΣ ΘΕΛΕΙ POST ΑΝΤΙ ΓΙΑ GET ΑΛΛΑ ΔΕΝ ΞΕΡΩ ΑΚΟΜΑ ΠΡΕΠΕΙ ΝΑ ΤΟ ΞΑΝΑΔΟΥΜΕ !!!!!!!-->
         <form action="index.html" method="GET" enctype="multipart/form-data" class="forma-yposthrikshs">
@@ -87,12 +88,17 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="index.html"><img src="assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο"></a>
-        <a href="index.html"><img src="assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο"></a>
-        <a href="index.html"><img src="assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο"></a>
-        <a href="index.html"><img src="assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+                alt="Facebook λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+                alt="Twitter λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+                alt="Instagram λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+                alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="index.html"><img src="assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
 
