--- a/Exercise2/product-iphone14-pro-max.html
+++ b/Exercise2/product-iphone14-pro-max.html
@@ -10,23 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="prod-iphone14-promax-details.css">
+    <link rel="stylesheet" href="/Exercise2/css/product-iphone14-pro-max.css">
 
 </head>
 
 <body>
-    
+
     <header class="header-light-color">
-        
-        <a href="index.html"><img src="assets/Technodata-logos_black.png" width="700" height="160" alt="Technodata λογότυτπο"></a>
+
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="index.html">ΑΡΧΙΚΗ</a>
-            <a href="product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
+            <a href="/Exercise2/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
 
     </header>
@@ -35,26 +36,29 @@
     <main class="main-content">
 
         <h2>Apple iPhone 14 Pro Max 128GB - Space Black Κινητό Smartphone</h2>
-        <h3> <a href="products-phones.html">Κινητό Τηλέφωνο</a></h3>
+        <h3> <a href="/Exercise2/products-phones.html">Κινητό Τηλέφωνο</a></h3>
         <h4>267271</h4>
-        <img src="assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
+        <img src="/assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
 
         <div class="value">
             <span>€1549.00</span>
         </div>
 
-        <section class="product-descr"> <!-- ΝΑ ΒΑΛΟΥΜΕ ΞΕΧΩΡΙΣΤΑ CLASS ΣΤΟ ΚΑΘΕ DIV!!!!-->
+        <section class="product-descr">
+            <!-- ΝΑ ΒΑΛΟΥΜΕ ΞΕΧΩΡΙΣΤΑ CLASS ΣΤΟ ΚΑΘΕ DIV!!!!-->
             <div class="outer-box">
                 <div class="manifacturer">
                     <h3>Κατασκευαστής</h3>
 
-                    <img src="assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
+                    <img src="/assets/apple_logo.png" width="100" height="100" alt="Apple λογότυπο">
 
                 </div>
 
                 <div class="perigrafh">
                     <h3>Περιγραφή προϊόντος</h3>
-                    <p>iPhone 14 Pro Max. Αιχμαλώτισε εικόνες με απίστευτη λεπτομέρεια με την κύρια κάμερα 48MP. Ζήσε τη νέα εμπειρία iPhone με τη νέα Dynamic Island και την οθόνη Always-On. Η λειτουργία Crash Detection, μια νέα δυνατότητα ασφάλειας, καλεί σε βοήθεια όταν εσύ δεν μπορείς.</p>
+                    <p>iPhone 14 Pro Max. Αιχμαλώτισε εικόνες με απίστευτη λεπτομέρεια με την κύρια κάμερα 48MP. Ζήσε τη
+                        νέα εμπειρία iPhone με τη νέα Dynamic Island και την οθόνη Always-On. Η λειτουργία Crash
+                        Detection, μια νέα δυνατότητα ασφάλειας, καλεί σε βοήθεια όταν εσύ δεν μπορείς.</p>
 
                 </div>
 
@@ -72,7 +76,7 @@
             </div>
         </section>
 
-        <img src="assets/analytiko.jpg" alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
+        <img src="/assets/analytiko.jpg" alt="Διαφορές καινούριων μοντέλων και σύγκριση χαρακτηριστικών">
 
         <section class="analytika-xarakthristika">
             <div class="row-title">
@@ -84,7 +88,7 @@
             </div>
             <div class="row">
                 <div class="label">Κύρια Κάμερα</div>
-                <div class="value">Triple 48 Mp & 12 Mp & 12 Mp   </div>
+                <div class="value">Triple 48 Mp & 12 Mp & 12 Mp </div>
             </div>
             <div class="row">
                 <div class="label">Selfie Κάμερα</div>
@@ -162,15 +166,15 @@
                 <div class="label">Site</div>
                 <div class="value"><a href="http://www.apple.com">http://www.apple.com</a></div>
             </div>
-        </section>    
+        </section>
 
 
     </main>
 
     <section class="forma">
-    <!-- ΙΣΩΣ Η ΒΑΘΜΟΛΟΓΙΑ ΝΑ ΘΕΛΕΙ ΚΑΙ ΜΕΣΑ ΣΤΟ ΜΑΙΝ... ΘΑ ΔΟΥΜΕ!!!!!-->
+        <!-- ΙΣΩΣ Η ΒΑΘΜΟΛΟΓΙΑ ΝΑ ΘΕΛΕΙ ΚΑΙ ΜΕΣΑ ΣΤΟ ΜΑΙΝ... ΘΑ ΔΟΥΜΕ!!!!!-->
         <h3>Δώστε μας μια βαθμολογία!</h3>
-        <form action="prod-iphone14-promax-details.html" class="vathmologia-asteria">
+        <form action="/Exercise2/product-iphone14-pro-max.html" class="vathmologia-asteria">
 
             <p>Βαυμολογήστε μας και αφήστε τα σχόλια σας απο κάτω!</p>
             <input type="radio" id="1ast" name="vathmologia" value="1 αστέρι">
@@ -182,11 +186,11 @@
             <input type="radio" id="4ast" name="vathmologia" value="4 αστέρια">
             <label for="4ast">1 αστέρι</label>
             <input type="radio" id="5ast" name="vathmologia" value="5 αστέρια">
-            <label for="5ast">5 αστέρια</label> 
+            <label for="5ast">5 αστέρια</label>
             <br>
 
             <label for="sxolia">Τα σχόλια σας:</label>
-                    <textarea id="sxolia" name="sxolia" placeholder="Γράψτε εδώ..."></textarea>
+            <textarea id="sxolia" name="sxolia" placeholder="Γράψτε εδώ..."></textarea>
 
             <br>
             <input type="submit">
@@ -196,13 +200,19 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="index.html"><img src="assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο"></a>
-        <a href="index.html"><img src="assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο"></a>
-        <a href="index.html"><img src="assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο"></a>
-        <a href="index.html"><img src="assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+                alt="Facebook λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+                alt="Twitter λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+                alt="Instagram λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+                alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="index.html"><img src="assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο"></a>
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                alt="Tecnhodata λογότυπο"></a>
     </footer>
 
 </body>
+
 </html>
