--- a/Exercise2/about_us.html
+++ b/Exercise2/about_us.html
@@ -10,22 +10,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
+    <link rel="stylesheet" href="/Exercise2/css/about_us.css">
 
 </head>
 
 <body>
     <header class="header-light-color">
 
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
-            <a href="/Exercise1/index.html">ΑΡΧΙΚΗ</a>
-            <a href="/Exercise1/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-            <a href="/Exercise1/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-            <a href="/Exercise1/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-            <a href="/Exercise1/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-            <a href="/Exercise1/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+            <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
+            <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+            <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+            <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+            <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+            <a href="/Exercise2/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
 
     </header>
@@ -75,16 +76,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise1/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise1/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise1/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
