--- a/Exercise2/product-categories.html
+++ b/Exercise2/product-categories.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header-light-color">
 
-        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="/Exercise2/index.html"><img class="image" src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
@@ -35,13 +35,13 @@
     <main class="main-content">
         <section id="categories">
             <h1>Τα προϊόντα μας</h1>
-            <section id="technology">
+            <section class="subcategory">
                 <!-- ΝΑ ΒΑΛΟΥΜΕ ΚΑΙ ΣΤΟ UL CLASS???-->
                 <h2>Τεχνολογία</h2>
                 <ul>
                     <li class="category-card">
                         <a href="/Exercise2/products-phones.html">
-                            <img src="/assets/phones.png" width="200" height="200"
+                            <img class="image" src="/assets/phones.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
 
@@ -54,7 +54,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/tablets.png" width="200" height="200" alt="εικόνα κατηγορίας tablet">
+                            <img class="image" src="/assets/tablets.png" width="200" height="200" alt="εικόνα κατηγορίας tablet">
 
 
                             <div class="info">
@@ -67,7 +67,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/products-pcs.html">
-                            <img src="/assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                            <img class="image" src="/assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
 
                             <div class="info">
@@ -80,7 +80,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/tvs.png" width="200" height="200" alt="εικόνα κατηγορίας εικόνας">
+                            <img class="image" src="/assets/tvs.png" width="200" height="200" alt="εικόνα κατηγορίας εικόνας">
 
 
                             <div class="info">
@@ -93,7 +93,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/sound.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                            <img class="image" src="/assets/sound.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
 
                             <div class="info">
@@ -106,7 +106,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/consoles.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                            <img class="image" src="/assets/consoles.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
 
 
                             <div class="info">
@@ -119,13 +119,13 @@
 
             </section>
 
-            <section id="spiti">
+            <section class="subcategory">
                 <h2>Σπίτι</h2>
                 <ul>
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/fridges.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
+                            <img class="image" src="/assets/fridges.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
 
 
                             <div class="info">
@@ -138,7 +138,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/ovens.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
+                            <img class="image" src="/assets/ovens.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
 
 
                             <div class="info">
@@ -151,7 +151,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/absorbers.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
+                            <img class="image" src="/assets/absorbers.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
 
 
                             <div class="info">
@@ -164,7 +164,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/dishwashers.png" width="200" height="200"
+                            <img class="image" src="/assets/dishwashers.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
 
@@ -178,7 +178,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                            <img class="image" src="/assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
 
                             <div class="info">
@@ -191,7 +191,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/washing-machines.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                            <img class="image" src="/assets/washing-machines.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
 
                             <div class="info">
@@ -204,13 +204,13 @@
 
             </section>
 
-            <section id="subcategory">
+            <section class="subcategory">
                 <h2>Αυτοκίνητο - Μηχανή</h2>
                 <ul>
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/gps.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
+                            <img class="image" src="/assets/gps.png" width="200" height="200" alt="εικόνα κατηγορίας ψυγείων">
 
 
                             <div class="info">
@@ -223,7 +223,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/alarms.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
+                            <img class="image" src="/assets/alarms.png" width="200" height="200" alt="εικόνα κατηγορίας κουζινών">
 
 
                             <div class="info">
@@ -236,7 +236,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/reverse-cameras.png" width="200" height="200"
+                            <img class="image" src="/assets/reverse-cameras.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας κουζινών">
 
 
@@ -250,7 +250,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/parking-sensors.png" width="200" height="200"
+                            <img class="image" src="/assets/parking-sensors.png" width="200" height="200"
                                 alt="εικόνα κατηγορίας πληντύριων πιάτων">
 
 
@@ -264,7 +264,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/car-lighting.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                            <img class="image" src="/assets/car-lighting.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
 
                             <div class="info">
@@ -277,7 +277,7 @@
 
                     <li class="category-card">
                         <a href="/Exercise2/product-categories.html">
-                            <img src="/assets/car-accessories.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                            <img class="image" src="/assets/car-accessories.png" width="200" height="200" alt="εικόνα κατηγορίας">
 
 
                             <div class="info">
@@ -293,13 +293,13 @@
 
         </section>
 
-        <section id="popular-products">
+        <section class="popular-products">
             <h2>Δημοφιλή προϊόντα</h2>
             <ul>
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
-                        <img src="/assets/popular0.png" width="200" height="200" alt="">
+                        <img class="image" src="/assets/popular0.png" width="200" height="200" alt="">
                         <p class="category">Κινητή Τηλεφωνία</p>
                         <p class="name">Apple iPhone 13 5G (4GB/128GB)</p>
                         <p class="price">865,70€</p>
@@ -310,7 +310,7 @@
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
-                        <img src="/assets/popular1.png" width="200" height="200" alt="">
+                        <img class="image" src="/assets/popular1.png" width="200" height="200" alt="">
                         <p class="category">Ηλεκτρονικοί Υπολογιστές</p>
                         <p class="name">Apple MacBook Air 13.3" (2020)</p>
                         <p class="price">1.130,00€</p>
@@ -321,7 +321,7 @@
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
-                        <img src="/assets/popular2.png" width="200" height="200" alt="">
+                        <img class="image" src="/assets/popular2.png" width="200" height="200" alt="">
                         <p class="category">Πληντύρια Ρούχων</p>
                         <p class="name">AEG LFR73964VG</p>
                         <p class="price">849,00€</p>
@@ -332,7 +332,7 @@
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
-                        <img src="/assets/popular3.png" width="200" height="200" alt="">
+                        <img class="image" src="/assets/popular3.png" width="200" height="200" alt="">
                         <p class="category">Αξεσουάρ Αυτοκινήτου</p>
                         <p class="name">Baseus 2xUSB 5A</p>
                         <p class="price">7,98€</p>
@@ -343,7 +343,7 @@
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
-                        <img src="/assets/popular4.png" width="200" height="200" alt="">
+                        <img class="image" src="/assets/popular4.png" width="200" height="200" alt="">
                         <p class="category">Ψυγεία</p>
                         <p class="name">Bosch KGN36NLEA</p>
                         <p class="price">469,00€</p>
@@ -354,7 +354,7 @@
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
-                        <img src="/assets/popular5.png" width="200" height="200" alt="">
+                        <img class="image" src="/assets/popular5.png" width="200" height="200" alt="">
                         <p class="category">Ηλεκτρονικοί Υπολογιστές</p>
                         <p class="name">Apple iMac 24" 2021</p>
                         <p class="price">1.630,00€</p>
@@ -367,16 +367,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img class="image" src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img class="image" src="/assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img class="image" src="/assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img class="image" src="/assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+        <a href="/Exercise2/index.html"><img class="image" src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
                 alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
