--- a/Exercise2/product-categories.html
+++ b/Exercise2/product-categories.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header-light-color">
 
-        <a href="/Exercise2/index.html"><img class="image" src="/assets/Technodata-logos_black.png" width="700" height="160"
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
         <nav class="navigation">
@@ -33,7 +33,7 @@
     </header>
 
     <main class="main-content">
-        <section id="categories">
+        
             <h1>Τα προϊόντα μας</h1>
             <section class="subcategory">
                 <!-- ΝΑ ΒΑΛΟΥΜΕ ΚΑΙ ΣΤΟ UL CLASS???-->
@@ -291,7 +291,7 @@
             </section>
 
 
-        </section>
+       
 
         <section class="popular-products">
             <h2>Δημοφιλή προϊόντα</h2>
